--- a/medicine/templates/home.html
+++ b/medicine/templates/home.html
@@ -6,47 +6,56 @@
         <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
             <h1 class="display-4">Главная страница</h1>
         </div>
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-12 d-flex justify-content-center">
-                    <div class="col-6 card mb-4 box-shadow">
-                        <div class="card-header">
-                            <h4 class="my-0 font-weight-normal">Статистика сервиса</h4>
-                        </div>
-                        <div class="card-body">
-                            <ul class="list-unstyled mt-3 mb-4 text-center m-3">
-                                <li>Количество рассылок: {{ mailings_count }}</li>
-                            </ul>
-                            <ul class="list-unstyled mt-3 mb-4 text-center m-3">
-                                <li>Количество активных рассылок: {{ active_mailings }}</li>
-                            </ul>
-                            <ul class="list-unstyled mt-3 mb-4 text-center m-3">
-                                <li>Количество уникальных клиентов: {{ uniq_clients }}</li>
-                            </ul>
-                        </div>
+        <hr>
+        <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+            <h6 class="display-4">Наши услуги</h6>
+        </div>
+        <div class="container text-center">
+            <div class="row row-cols-2 row-cols-lg-6 g-2 g-lg-4">
+                {% for procedure in procedures_list %}
+                <div class="col">
+                    <div class="p-3">
+                        <a class="btn btn-mb btn-outline-light"
+                           href="{% url 'medicine:procedures_detail' procedure.pk %}">{{procedure.title}}</a>
                     </div>
                 </div>
+                {% endfor %}
             </div>
         </div>
-        {% for blog in blog_list %}
-        <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="card mb-4 box-shadow">
-                <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">{{blog.title}}</h4>
-                </div>
-                <div class="card-body">
-                    <img src="{{blog.image | media_tag }}" class="card-img-top img-thumbnail">
-                    <ul class="list-unstyled mt-3 mb-4 text-start m-3">
-                        <li>{{ blog.content }}</li>
-                    </ul>
-                    <a class="btn btn-mb btn-outline-primary"
-                       href="{% url 'blog:blog_detail' blog.pk %}">Подробнее</a>
-                    <hr>
-                    <a class="text-muted float-right">Количество просмотров: {{blog.count_of_views}}</a>
-                </div>
+    </div>
+</div>
+<hr>
+<div class="container">
+    <div class="row row-cols-2 row-cols-lg-3 g-2 g-lg-4">
+        <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom1"
+                aria-controls="offcanvasBottom1">Описание компании
+        </button>
+
+        <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom1"
+             aria-labelledby="offcanvasBottomLabel1">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasBottomLabel1">Описание компании ниже</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Закрыть"></button>
+            </div>
+            <div class="offcanvas-body small">
+                Здесь будет описание вашей компании
             </div>
         </div>
-        {% endfor %}
+        <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom2"
+                aria-controls="offcanvasBottom2">Контактная информация
+        </button>
+
+        <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom2"
+             aria-labelledby="offcanvasBottomLabel2">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasBottomLabel2">Контакты компании ниже</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Закрыть"></button>
+            </div>
+            <div class="offcanvas-body small">
+                Номер-7-777-777-77-77
+                Почта-почта_компании@например.ru
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
