--- a/medicine/templates/includes/inc_menu.html
+++ b/medicine/templates/includes/inc_menu.html
@@ -10,7 +10,7 @@
             <div class="col-sm-4 offset-md-1 py-4">
                 <h4>Навигация</h4>
                 <ul class="list-unstyled">
-                    <li><a href="#" class="text-white">Главная</a></li>
+                    <li><a href="{% url 'medicine:home' %}" class="text-white">Главная</a></li>
                     {% if user.is_authenticated %}
                     <li><a href="{% url 'users:logout' %}">Выход</a></li>
                     {% else %}
