--- a/medicine/templates/includes/inc_menu.html
+++ b/medicine/templates/includes/inc_menu.html
@@ -11,6 +11,9 @@
                 <h4>Навигация</h4>
                 <ul class="list-unstyled">
                     <li><a href="{% url 'medicine:home' %}" class="text-white">Главная</a></li>
+                    <li><a href="{% url 'medicine:doctors_list' %}" class="text-white">О компании</a></li>
+                    <li><a href="{% url 'medicine:procedures_list' %}" class="text-white">Услуги</a></li>
+                    <li><a href="{% url 'medicine:contact_info' %}" class="text-white">Контакты</a></li>
                     {% if user.is_authenticated %}
                     <li><a href="{% url 'users:logout' %}">Выход</a></li>
                     {% else %}
